--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   <style>
     body { font-family: Arial, sans-serif; padding: 1rem; }
     h1 { color: #2c3e50; }
+    input{ width:100%;}
   </style>
 </head>
 <body>
