--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
   <h1>Olá, este é meu PWA!</h1>
   <p>Este app funciona offline e pode ser instalado.</p>
   <input type="text" placeholder="Digite um texto">
+  <input type="text" placeholder="Digite um texto">
 
   <script src="sw.js"></script>
   <script>
