--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
   <p>Este app funciona offline e pode ser instalado.</p>
   <input type="text" placeholder="Digite um texto">
   <input type="text" placeholder="Digite um texto">
+  <input type="text" placeholder="Digite um texto">
 
   <script src="sw.js"></script>
   <script>
