--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
   <input type="text" placeholder="Digite um texto">
   <input type="text" placeholder="Digite um texto">
   <input type="text" placeholder="Digite um texto">
+  <p>teste</p>
 
   <script src="sw.js"></script>
   <script>
