--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
   <input type="text" placeholder="Digite um texto">
   <input type="text" placeholder="Digite um texto">
   <p>teste</p>
+  <p>teste</p>
 
   <script src="sw.js"></script>
   <script>
