--- a/index.html
+++ b/index.html
@@ -1,34 +1,105 @@
 <!DOCTYPE html>
-<html lang="pt-BR">
+<html lang="pt-br">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-
-  <title>Meu PWA</title>
-  <link rel="manifest" href="manifest.json" />
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Cards Estilo Shopee</title>
   <style>
-    body { font-family: Arial, sans-serif; padding: 1rem; }
-    h1 { color: #2c3e50; }
-    input{ width: 100%; }
+    body {
+      font-family: Arial, sans-serif;
+      background-color: #f5f5f5;
+      margin: 0;
+      padding: 40px;
+    }
+
+    h1 {
+      text-align: center;
+      color: #ee4d2d;
+    }
+
+    .cards-container {
+      display: grid;
+      grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+      gap: 20px;
+      max-width: 1200px;
+      margin: auto;
+    }
+
+    .card {
+      background-color: white;
+      border: 1px solid #ddd;
+      border-radius: 8px;
+      overflow: hidden;
+      box-shadow: 0 2px 8px rgba(0, 0, 0, 0.05);
+      transition: transform 0.2s ease;
+    }
+
+    .card:hover {
+      transform: translateY(-5px);
+    }
+
+    .card img {
+      width: 100%;
+      height: 180px;
+      object-fit: cover;
+    }
+
+    .card-content {
+      padding: 15px;
+      text-align: center;
+    }
+
+    .card-title {
+      font-size: 16px;
+      margin: 10px 0;
+      color: #333;
+    }
+
+    .btn-ver {
+      display: inline-block;
+      background-color: #ee4d2d;
+      color: white;
+      padding: 10px 20px;
+      border-radius: 5px;
+      text-decoration: none;
+      font-weight: bold;
+      transition: background 0.3s;
+    }
+
+    .btn-ver:hover {
+      background-color: #d84322;
+    }
   </style>
 </head>
 <body>
-  <h1>Olá, este é meu PWA!</h1>
-  <p>Este app funciona offline e pode ser instalado.</p>
-  <input type="text" placeholder="Digite um texto">
-  <input type="text" placeholder="Digite um texto">
-  <input type="text" placeholder="Digite um texto">
-  <p>teste</p>
-  <p>teste</p>
+  <h1>Produtos em Destaque</h1>
 
-  <script src="sw.js"></script>
-  <script>
-    // Registrando o Service Worker
-    if ('serviceWorker' in navigator) {
-      navigator.serviceWorker.register('sw.js')
-        .then(() => console.log('Service Worker registrado com sucesso!'))
-        .catch(e => console.log('Erro ao registrar SW:', e));
-    }
-  </script>
+  <div class="cards-container">
+    <div class="card">
+      <img src="https://via.placeholder.com/300x180?text=Produto+1" alt="Produto 1">
+      <div class="card-content">
+        <div class="card-title">Produto 1</div>
+        <a href="#" class="btn-ver">Ver</a>
+      </div>
+    </div>
+
+    <div class="card">
+      <img src="https://via.placeholder.com/300x180?text=Produto+2" alt="Produto 2">
+      <div class="card-content">
+        <div class="card-title">Produto 2</div>
+        <a href="#" class="btn-ver">Ver</a>
+      </div>
+    </div>
+
+    <div class="card">
+      <img src="https://via.placeholder.com/300x180?text=Produto+3" alt="Produto 3">
+      <div class="card-content">
+        <div class="card-title">Produto 3</div>
+        <a href="#" class="btn-ver">Ver</a>
+      </div>
+    </div>
+
+    <!-- Adicione mais cards conforme desejar -->
+  </div>
 </body>
 </html>
